# diplom

./: main.py  pyproject.toml  test.py
backend/: export.py  models.py
backend/core/: __init__.py
backend/core/entities/: orbit.py  planet.py  point.py  position.py  spacecraft.py
backend/core/entities/areas/: base.py  illuminated_area.py  recipient_area.py  spacecraft_view_area.py
backend/core/examples/: example_1.py
backend/core/utils/: vizualization.py
backend/services/: intersection.py
core/: __init__.py
core/entities/: orbit.py  planet.py  point.py  position.py  spacecraft.py  view_area.py
core/entities/areas/: base.py  illuminated_area.py  spacecraft_view_area.py
core/utils/: vizualization.py
entities/: __init__.py  math.py  orbit.py  point.py  track.py
front/: main.py
front/web/js/: 3d_map_example.js  general.js  line_example.js  map_example.js
front/web/templates/: base.html  layout.html
front/web/templates/macros/: tabs.html
front/web/templates/tabs/: objects.html  satellites.html  simulation.html
frontend/js/: general.js  line_example.js  map.js
frontend/templates/: home.html  layout.html  map.html
frontend/templates/macros/: tabs.html
frontend/templates/tabs/: efficiency.html  map.html  objects.html  periodicity.html  recipients.html  satellites.html  simulation.html
old/: models.py  objects.py
old/old_entities/: __init__.py  orbit.py  planet.py  point.py  spacecraft.py  track.py  view_area.py
old/track/: expressions.py
old/view_area/: expressions.py
use_cases/: example_1.py
