[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Мазуренко Александр <amazurenko@rvision.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
Eel = {extras = ["jinja2"], version = "^0.15.1"}
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
