[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Мазуренко Александр <amazurenko@rvision.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8, <3.11"
Eel = {extras = ["jinja2"], version = "^0.15.1"}
pydantic = "^1.10.4"
pyinstaller = "^5.7.0"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
